@@ -15,13 +15,23 @@ is what autosomethingorother wanted. It is based on what the HP Legal
 Eagles gave me. I am not sure if the legalese is clear, but the intent
 is to say "Here is a benchmark. Use it in good health. Pass it along,
 port it, enhance it. You didn't pay for this tool, so don't expect it
-to be perfect ;-)" The rest of it is there to keep the layers happy...
+to be perfect ;-)" The rest of it is there to keep the layers happy...  
 
-Feel free to report results in public forums, but please be
+While the copyright is pretty much in spirit an "open source" one, it
+is not in letter - I never took the time to try to get it approved.
+If you feel strongly about the license of the code you use and want
+something under the GPL, consider netperf4:
+
+http://www.netperf.org/svn/netperf4/trunk
+
+Feel free to report netperf results in public forums, but please be
 excruciatingly complete in your description of the test envorinment.
-Better still, report results to the netperf database at
-http://www.netperf.org/netperf/NetperfPage.html.  However, the netperf
-database is rather long in the tooth these days.
+The old netperf database at:
+
+  http://www.netperf.org/netperf/NetperfPage.html
+
+is no more - or rather the utilities for accessing it no longer run.
+The data is still present in the tree, albeit _VERY_ old now.
 
 There is an Internet mailing list devoted to netperf. It is called
 netperf-talk and it is hosted on netperf.org. Subscription requests
